--- a/stopCluster.yaml
+++ b/stopCluster.yaml
@@ -2,7 +2,8 @@
 - name: Stop Cluster
   hosts: localhost
   become: true
-  become_user: admin
+  become_method: enable
+  #become_user: admin
   vars:
     host= "localhost"
   
